--- a/SceneOfCustoms.csproj
+++ b/SceneOfCustoms.csproj
@@ -103,9 +103,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="EntityFramework">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
@@ -159,6 +156,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CommonController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
@@ -173,11 +171,30 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\bootstrap32\css\bootstrap-theme.css" />
+    <Content Include="Content\bootstrap32\css\bootstrap-theme.min.css" />
+    <Content Include="Content\bootstrap32\css\bootstrap.css" />
+    <Content Include="Content\bootstrap32\css\bootstrap.min.css" />
+    <Content Include="Content\bootstrap32\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Content\bootstrap32\js\bootstrap.js" />
+    <Content Include="Content\bootstrap32\js\bootstrap.min.js" />
+    <Content Include="css\superfish-navbar.css" />
+    <Content Include="css\superfish-vertical.css" />
+    <Content Include="css\superfish.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="js\hoverIntent.js" />
+    <Content Include="js\jquery-1.8.2.min.js" />
+    <Content Include="js\superfish.js" />
+    <Content Include="Lib\Newtonsoft.Json.dll" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Content\bootstrap32\css\bootstrap-theme.css.map" />
+    <Content Include="Content\bootstrap32\css\bootstrap.css.map" />
+    <Content Include="Content\bootstrap32\fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="Content\bootstrap32\fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="Content\bootstrap32\fonts\glyphicons-halflings-regular.woff" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -228,6 +245,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Common\" />
+    <Folder Include="Views\Common\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
