--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,11 @@ obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
 obj/Debug/SceneOfCustoms.csproj.FileListAbsolute.txt
 obj/Debug/SceneOfCustoms.dll
 SceneOfCustoms.csproj.user
+*.dll
+*.xml
+obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
+*.cache
+obj/Debug/SceneOfCustoms.csproj.FileListAbsolute.txt
+*.pdb
+*.cache
+obj/Debug/SceneOfCustoms.csproj.FileListAbsolute.txt
