--- a/.gitignore
+++ b/.gitignore
@@ -16,10 +16,5 @@ obj/Debug/SceneOfCustoms.csproj.FileListAbsolute.txt
 obj/Debug/SceneOfCustoms.dll
 *.dll
 *.pdb
-*.dll 
-bin/SceneOfCustoms.dll
 *.pdb
-obj/Debug/SceneOfCustoms.csproj.FileListAbsolute.txt
-bin/SceneOfCustoms.pdb
-obj/Debug/SceneOfCustoms.csproj.FileListAbsolute.txt
-obj/Debug/SceneOfCustoms.pdb
+obj/Debug/
