封装分页方法到Extension

--- a/bin/SceneOfCustoms.dll.config
+++ b/bin/SceneOfCustoms.dll.config
@@ -9,13 +9,14 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-SceneOfCustoms-20160911114547.mdf;Initial Catalog=aspnet-SceneOfCustoms-20160911114547;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-SceneOfCustoms-20160911114547.mdf;Initial Catalog=aspnet-SceneOfCustoms-20160911114547;Integrated Security=True" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="strconn" value="Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=172.20.70.21)(PORT=1521))(CONNECT_DATA=(SID=cusdoc)));User Id=cusdoc;Password=cusdoc2016;Pooling=true;Min Pool Size=100;Max Pool Size=1000;"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
