--- a/Web.config
+++ b/Web.config
@@ -16,8 +16,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="strconn" value="Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=172.20.70.21)(PORT=1521))(CONNECT_DATA=(SID=cusdoc)));User Id=cusdoc;Password=cusdoc2016;Pooling=true;Min Pool Size=100;Max Pool Size=1000;"/>
-    <add key="basedata_conn" value="Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=192.168.252.15)(PORT=1521))(CONNECT_DATA=(SID=custdb)));User Id=cusdoc;Password=pass20160421cus;Pooling=true;Min Pool Size=100;Max Pool Size=1000;"/>
+    <add key="strconn" value="Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=172.20.60.35)(PORT=1521))(CONNECT_DATA=(SID=untestdb)));User Id=customs;Password=customs20160908;Pooling=true;Min Pool Size=100;Max Pool Size=1000;"/>
+    <add key="basedata_conn" value="Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=172.20.70.21)(PORT=1521))(CONNECT_DATA=(SID=cusdoc)));User Id=cusdoc;Password=cusdoc2016;Pooling=true;Min Pool Size=100;Max Pool Size=1000;"/>
     <!--redis库配置信息-->
     <add key="RedisServer" value="172.20.70.20"/>
     <add key="RedisPort" value="6379"/>
