--- a/Web.config
+++ b/Web.config
@@ -22,16 +22,18 @@
     <add key="RedisServer" value="172.20.70.20"/>
     <add key="RedisPort" value="6379"/>
   </appSettings>
-  <system.web>
-    <authentication mode="None" />
+  <system.web> 
     <compilation debug="true" targetFramework="4.5" />
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/Login" timeout="2880"/>
+    </authentication>
     <httpRuntime targetFramework="4.5" />
   </system.web>
-  <system.webServer>
+  <!--<system.webServer>
     <modules>
       <remove name="FormsAuthentication" />
     </modules>
-  </system.webServer>
+  </system.webServer>-->
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
