--- a/bin/SceneOfCustoms.dll.config
+++ b/bin/SceneOfCustoms.dll.config
@@ -16,7 +16,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="strconn" value="Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=172.20.70.21)(PORT=1521))(CONNECT_DATA=(SID=cusdoc)));User Id=cusdoc;Password=cusdoc2016;Pooling=true;Min Pool Size=100;Max Pool Size=1000;"/>
+    <add key="strconn" value="Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=172.20.60.35)(PORT=1521))(CONNECT_DATA=(SID=untestdb)));User Id=customs;Password=customs20160908;Pooling=true;Min Pool Size=100;Max Pool Size=1000;"/>
     <add key="basedata_conn" value="Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=172.20.70.21)(PORT=1521))(CONNECT_DATA=(SID=cusdoc)));User Id=cusdoc;Password=cusdoc2016;Pooling=true;Min Pool Size=100;Max Pool Size=1000;"/>
     <!--redis库配置信息-->
     <add key="RedisServer" value="172.20.70.20"/>
@@ -25,6 +25,9 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/Login" timeout="2880"/>
+    </authentication>
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <system.webServer>
