--- a/SceneOfCustoms.csproj
+++ b/SceneOfCustoms.csproj
@@ -305,8 +305,8 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\Order\Index.cshtml" />
-    <Content Include="Views\Order\Edit.cshtml" />
+    <Content Include="Views\Order\AirIn_List.cshtml" />
+    <Content Include="Views\Order\AirIn_Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
