--- a/SceneOfCustoms.csproj
+++ b/SceneOfCustoms.csproj
@@ -307,6 +307,8 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Order\AirIn_List.cshtml" />
     <Content Include="Views\Order\AirIn_Edit.cshtml" />
+    <Content Include="Views\Order\AirOut_List.cshtml" />
+    <Content Include="Views\Order\AirOut_Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
