--- a/SceneOfCustoms.csproj
+++ b/SceneOfCustoms.csproj
@@ -314,6 +314,10 @@
     </Content>
     <Content Include="Views\Shared\Empty.cshtml" />
     <Content Include="Views\Order\SeaOut_List.cshtml" />
+    <Content Include="Views\Order\LandIn_List.cshtml" />
+    <Content Include="Views\Order\LandIn_Edit.cshtml" />
+    <Content Include="Views\Order\LandOut_List.cshtml" />
+    <Content Include="Views\Order\LandOut_Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
