--- a/SceneOfCustoms.csproj
+++ b/SceneOfCustoms.csproj
@@ -185,6 +185,10 @@
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="SyncDataFromSap.asmx.cs">
+      <DependentUpon>SyncDataFromSap.asmx</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -268,6 +272,7 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
+    <Content Include="SyncDataFromSap.asmx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
