--- a/Web.config
+++ b/Web.config
@@ -14,6 +14,7 @@
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
+    <add key="vs:EnableBrowserLink" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="strconn" value="Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=172.20.60.35)(PORT=1521))(CONNECT_DATA=(SID=untestdb)));User Id=customs;Password=customs20160908;Pooling=true;Min Pool Size=100;Max Pool Size=1000;"/>
