--- a/bin/SceneOfCustoms.dll.config
+++ b/bin/SceneOfCustoms.dll.config
@@ -70,4 +70,25 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="CustomerServiceSoap" />
+      </basicHttpBinding>
+      <customBinding>
+        <binding name="CustomerServiceSoap12">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpTransport />
+        </binding>
+      </customBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://221.224.21.20:6790/CustomerService.asmx"
+        binding="basicHttpBinding" bindingConfiguration="CustomerServiceSoap"
+        contract="ServiceReference2.CustomerServiceSoap" name="CustomerServiceSoap" />
+      <endpoint address="http://221.224.21.20:6790/CustomerService.asmx"
+        binding="customBinding" bindingConfiguration="CustomerServiceSoap12"
+        contract="ServiceReference2.CustomerServiceSoap" name="CustomerServiceSoap12" />
+    </client>
+  </system.serviceModel>
   </configuration>
