--- a/Web.config
+++ b/Web.config
@@ -25,11 +25,29 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" requestLengthDiskThreshold="256" maxRequestLength="2097151"/>
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880"/>
     </authentication>
-    <httpRuntime targetFramework="4.5" />
-  </system.web> 
+  </system.web>
+  <system.webServer>
+    <security>
+      <requestFiltering>
+        <!--500MB-->
+        <requestLimits maxAllowedContentLength="500000000" />
+      </requestFiltering>
+    </security>
+    <validation validateIntegratedModeConfiguration="false"/>
+    <modules runAllManagedModulesForAllRequests="true"/>
+    <handlers>
+      <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit"/>
+      <remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit"/>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0"/>
+      <add name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness32" responseBufferLimit="0"/>
+      <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0"/>
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0"/>
+    </handlers>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -89,3 +107,4 @@
     </client>
   </system.serviceModel>
   </configuration>
+
